# trigger-zfs-autobackup

./: .gitignore  LICENSE  README.md  config_template.toml  install.sh  pyproject.toml
.github/workflows/: python-checks.yml
trigger_zfs_autobackup/: app.py  config_reader.py  truenas_sendmail.py
